--- a/bfdayyay.html
+++ b/bfdayyay.html
@@ -157,12 +157,12 @@
     <!-- Step 4 -->
     <div class="letter" id="letter">
       <p>
-        Happy Boyfriend Day, my love 💕. I still can’t believe how lucky I am to have you!!!!!
+        Happy Boyfriend Day, my love 😚💕. I still can’t believe how lucky I am to have you!!!!!
         From the day we met, you’ve been nothing but love, care, and happiness for me omggggg i lobeeee you so muchh meree sabseee pyareeeee cuteee bhonduuuuiuuu i lobe you i lobe youuuuuu !!!
         You’re my comfort, my safe place, and my biggest blessing frrr! 
         Even from miles apart, you make me feel closer than ever. 
         I want you to know that I’m so proud to call you mine and I’ll love you more and more every single day cause you deserve everything mere budhe!!!! 
-        Thank you for being the sweetest boyfriend in the world , you are my forever. ❤️
+        Thank you for being the sweetest boyfriend in the world , you are my forever ♾️💕 
       </p>
       <button class="btn" onclick="showFinal()">Next ➡️</button>
     </div>
@@ -172,7 +172,7 @@
       <p>💍 Will you be my one and only, forever and ever? 💖</p>
       <button class="btn" onclick="showEnd()">Yes, foreverrr 😘</button>
       <button class="btn" onclick="showEnd()">Always yours 💕</button>
-      <button class="btn" onclick="showEnd()">No escape, I’m stuck with you 😏❤️</button>
+      <button class="btn" onclick="showEnd()">No escape, I’m stuck with you 😏😈</button>
     </div>
 
     <!-- Step 6 -->
@@ -191,7 +191,7 @@
     ];
     const questionsTexts = [
       "Do you know you’re the most perfect boyfriend ever? 🥰",
-      "Will you let me be your annoying baddie forever? 😏👑",
+      "Will you let me be your annoying baddie forever? 😏😛",
       "Do you like being spoiled with my love? 😘",
       "Can I keep you forever and ever? 💖"
     ];
@@ -255,7 +255,7 @@
     }
 
     function createHearts() {
-      const colors = ["💖","❤️","💜","💕"];
+      const colors = ["💖","😋","😘","💕"];
       setInterval(() => {
         const heart = document.createElement("div");
         heart.classList.add("heart");
