--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 /* ✉️ Prettier Envelope */  
 .envelope {  
-  width: 150px;  
-  height: 100px;  
+  width: 80px;  
+  height: 80px;  
   background: #ff4da6;  
   position: relative;  
   margin: auto;  
@@ -48,8 +48,8 @@
   border-bottom: 50px solid #ff99cc;  
 }  
 .envelope .seal {  
-  width: 80px;  
-  height: 80px;  
+  width: 40px;  
+  height: 40px;  
   background: #fff;  
   border-radius: 50%;  
   position: absolute;  
@@ -181,8 +181,8 @@
     const popupTexts = [  
       "Haiiiiii my handsomee 😘",  
       "Happy Boyfriend Dayyy!!!! 💕",  
-      "You’re the best thing ever happened to me 🥺",  
-      "I lobe you endlessly, Sahu meri babygorl❤️"  
+      "You’re the best thing ever happened to me 😋",  
+      "I lobe you endlessly, Sahu meri babygorl 😚"  
     ];  
     const questionsTexts = [  
       "Do you know you’re the most perfect boyfriend ever? 🥰",  
