--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
     <!-- Step 0: Intro -->
     <div id="intro" class="popup" style="display:block;">
       <div class="popup-card">
-        Hiiiii my babyyy 😘💖<br><br>
+        Haaiiiii my babieeee 😘💖<br><br>
         I have a little secret for you…<br>
-        Something cute, something silly, and something just for YOU!<br><br>
-        I hope you’re ready for a surprise because today is all about you… my most handsome, cutest, most perfect Sahu 😍💖<br>
+        Something cute, something silly, and something just for YOU mere budheeee!<br><br>
+        I hope you’re ready for a surprise because today is all about you… my most handsome, cutest, most perfect Sahu 🥰💖<br>
         Are you excited? 👀💞<br>
         Click anywhere to see it! 💌
       </div>
@@ -191,7 +191,7 @@
 
     <!-- Step 6: End -->
     <div class="end" id="end">
-      <h2>🌸 SURPRISE!!! Happy Boyfriend Day, my love 💕✨</h2>
+      <h2>🌸 Happy Boyfriend Day, my love 💕✨</h2>
       <h3>Daddy lobes you endlessly 😘💖</h3>
       <p style="margin-top:10px; font-size:1.2rem; color:#ff4da6;">
         Thank you for being my cutest, funniest, and most loving Sahu! ♾️💖
@@ -211,8 +211,8 @@
 
     const surpriseText = "Guess what today is? 🤔🎉";
     const popupTexts = [
-      "Haiiiiii my handsomee 😘",
-      "Happy Boyfriend Dayyy!!!! 💕",
+      "IT'S DA BOYFRIENDS DAYYYY YAYYYYY!!!!! 😈😛",
+      "Happy Boyfriend Dayyy TO MY BOYFIEEEEE!!!! 💕",
       "You’re the best thing ever happened to me 💐",
       "I lobe you endlessly, Sahu meri babygorl 😚"
     ];
